--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   shared_preferences: ^2.5.3
   video_player: ^2.9.5
   url_launcher: ^6.3.1
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.3
