--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   video_player: ^2.9.5
   url_launcher: ^6.3.1
   shimmer: ^3.0.0
+  share_plus: ^11.0.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.3
