--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ dependencies:
   url_launcher: ^6.3.1
   shimmer: ^3.0.0
   share_plus: ^11.0.0
+  in_app_review: ^2.0.10
+  dio: ^5.8.0+1
+  record: ^6.0.0
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.3
