--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: ishora_tech
 description: "A new Flutter project."
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.3+4
+version: 1.0.5+6
 
 environment:
   sdk: ^3.7.0
@@ -15,7 +15,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   flutter_screenutil: ^5.9.3
   shared_preferences: ^2.5.3
-  video_player: ^2.9.5
+  video_player: ^2.10.0
   url_launcher: ^6.3.1
   shimmer: ^3.0.0
   share_plus: ^11.0.0
@@ -23,6 +23,11 @@ dependencies:
   dio: ^5.8.0+1
   record: ^6.0.0
   path_provider: ^2.1.5
+  internet_connection_checker_plus: ^2.7.2
+  audio_waveforms: ^1.3.0
+  permission_handler: ^12.0.1
+  http: ^1.4.0
+  http_parser: ^4.1.2
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.3
