--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   permission_handler: ^12.0.1
   http: ^1.4.0
   http_parser: ^4.1.2
+  lottie: ^3.3.1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.3
@@ -48,6 +49,7 @@ flutter:
     - assets/word/
     - assets/icon/
     - assets/images/
+    - assets/lottie/
 
   # fonts:
   #   - family: Schyler
