--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,30 +16,26 @@ dependencies:
   flutter_screenutil: ^5.9.3
   shared_preferences: ^2.5.3
   video_player: ^2.10.0
-  url_launcher: ^6.3.1
+  url_launcher: ^6.3.2
   shimmer: ^3.0.0
-  share_plus: ^11.0.0
-  in_app_review: ^2.0.10
-  record: ^6.0.0
+  share_plus: ^12.0.0
+  in_app_review: ^2.0.11
+  in_app_update: ^4.2.5
+  connectivity_plus: ^7.0.0
   path_provider: ^2.1.5
-  internet_connection_checker_plus: ^2.7.2
   audio_waveforms: ^1.3.0
   permission_handler: ^12.0.1
-  http: ^1.4.0
+  http: ^1.5.0
   http_parser: ^4.1.2
-  lottie: ^3.3.1
+  lottie: ^3.3.2
+  google_mobile_ads: ^6.0.0
+
 
 dev_dependencies:
-  flutter_launcher_icons: ^0.14.3
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^5.0.0
-
-flutter_icons:
-  android: true
-  ios: true
-  image_path: "assets/images/logo.png"
 
 flutter:
 
